--- a/03_Openai_api.qmd
+++ b/03_Openai_api.qmd
@@ -146,3 +146,20 @@ print(100*'-')
 print(response_larga.choices[0].message.content)
 ```
 
+## top_p (float: 0-1)
+
+Nucleus sampling: controla la diversidad seleccionando tokens cuya probabilidad suma 'top_p'.
+
+- 0.1: Muy conservador, usa solo las palabras más probables.
+- 0.5: Balance entre diversidad y precisión.
+- 0.9: Mayor variabilidad en el vocabulario.
+
+Nota: Generalmente se usa o 'temperature' o 'top_p', no ambos. Ejemplo de uso: top_p=0.9 Permite respuestas variadas pero coherentes.
+
+
+```{python}
+for top_p in [0.1, 0.5, 0.9]:
+    response = client.chat.completions.create(
+
+    )
+```
